--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NUnit.Console" version="3.0.1" />
+  <package id="NUnit.Runners" version="3.0.1" />
   <package id="WebDriver.ChromeDriver" version="26.14.313457.1" />
 </packages>
